<resources>
    <string name="app_name">TimeTable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addButtonDesc">Add job button</string>
    <string name="error_message_default">Расписания на этот день ещё нет!</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="add_job">Добавить занятие</string>
    <string name="timepicker_title">Укажите время</string>
    <string name="spinner_item_placeholder">SPINNER_ITEM_PLACEHOLDER</string>
    <string name="job_name">Предмет</string>
    <string name="job_teacher">Преподаватель</string>
    <string name="job_class">Место</string>
    <string name="day_of_week">День недели</string>
    <string name="starts_in">Начало</string>
    <string name="ends_in">Конец</string>
    <string name="time_placeholder">99:99</string>
    <string name="day_of_week_placeholder">DAY_OF_WEEK_PLACEHOLDER</string>
    <string name="day_of_week_picker_default">Понедельник</string>
    <string name="even_week">Четная неделя</string>
    <string name="day_picker_dialog_title">Выберите дни недели</string>
    <string name="job_type_picker_title">Выберите нужный тип</string>
    <string name="placeholder_long">PLACEHOLDER_PLACEHOLDER</string>
    <string name="placeholder_short">PLACEHOLDER</string>
    <string name="teacher_name_placeholder">TEACHER_NAME_PLACEHOLDER</string>
    <string name="app_action_default_title">Расписание</string>
    <string name="app_bar_setting_button_title">Настройки</string>
    <string name="app_bar_filter_button_title">Выбор недели</string>

    <string-array name="abbr_week_days">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>

    <string-array name="week_days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="job_types">
        <item>Урок</item>
        <item>Лекция</item>
        <item>Практика</item>
        <item>Лабораторная</item>
    </string-array>

    <string-array name="themes_names">
        <item>Красный</item>
        <item>Розовый</item>
        <item>Фиолетовый</item>
        <item>Темно-фиолетовый</item>
        <item>Индиго</item>
        <item>Синий</item>
        <item>Зеленый</item>
        <item>Серо-голубой</item>
    </string-array>

    <string-array name="themes_names_values">
        <item>red_100</item>
        <item>pink_100</item>
        <item>purple_100</item>
        <item>deep_purple_100</item>
        <item>indigo_100</item>
        <item>blue_100</item>
        <item>green_100</item>
        <item>blue_gray_100</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications_settings_header">Оповещения</string>
    <string name="themes_settings_header">Оформление</string>
    <string name="settings_title">Настройки</string>
    <string name="add_activity_group_title">Выбор дня и времени</string>
    <string name="add_activity_group_title_2">Дополнительно</string>
    <string name="batch_mode_switch_text">Режим заполнения</string>
    <string name="batch_mode_switch_summary">При включении, нажатие кнопки Сохранить не закроет окно добавления, позволяя Вам добавлять подобные занятия без повторного заполнения</string>
    <string name="add_activity_save_button">Сохранить</string>
    <string name="update_activity_delete_button">Удалить</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="close">close</string>
    <string name="open">open</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_table_dialog_title">Создать расписание</string>
    <string name="add_table_dialog_et_hint">Название расписания</string>
    <string name="app_bar_edit_table_button_title">Редактировать расписание</string>
    <string name="edit_timetable_dialog_title">Параметры расписания</string>
    <string name="timetable_name_edit_dialog_string">Название расписания</string>
    <string name="delete">Удалить</string>
    <string name="timetable_name_hint">Название</string>
    <string name="main_group_parameters_title">Основное</string>
    <string name="extra_group_params_title">Дополнительно</string>
    <string name="clear_timetable_card_text">Очистить расписание</string>
    <string name="delete_timetable">Удалить расписание</string>

</resources>