<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addActivityToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/add_layout_background">

        <EditText
            android:id="@+id/addJobName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/job_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/addJobTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/job_teacher"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/addJobClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/job_class"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="48dp"
        android:background="#1AAAAAAA">

        <LinearLayout
            android:id="@+id/dayOfWeekPickerLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/add_layout_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/day_of_week"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dayOfWeekText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/day_of_week_placeholder"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startTimePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/add_layout_background"
            android:layout_marginTop="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/starts_in"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/startTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_placeholder"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endTimePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/add_layout_background"
            android:layout_marginTop="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ends_in"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/endTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_placeholder"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:layout_marginEnd="4dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/evenWeekCheckerLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/add_layout_background"
            android:layout_marginTop="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">


            <TextView
                android:id="@+id/evenWeekCheckerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/even_week"
                android:layout_marginStart="4dp"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkEven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:clickable="false"
                android:layoutDirection="rtl"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/addCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/addConfirm"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>