<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorPrimaryDark"
    tools:context=".presentation.ui.AddActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_job_info" />

                <EditText
                    android:id="@+id/addJobName"
                    android:drawableTint="@android:color/holo_red_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/job_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                <EditText
                    android:id="@+id/addJobTeacher"
                    android:drawableTint="@android:color/holo_red_dark"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/job_teacher"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editTextLa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="8"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_baseline_meeting_room_24" />

                <EditText
                    android:id="@+id/addJobClass"
                    android:drawableTint="@android:color/holo_red_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/job_class"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/dividerLine"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"/>

    <TextView
        android:id="@+id/groupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:text="@string/add_activity_group_title"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerLine" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dayPickerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupTitle" >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dayPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/startTimePickerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dayPickerCard">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:text="@string/starts_in"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/startTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/time_placeholder"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/endTimePickerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimePickerCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ends_in"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginStart="4dp"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/endTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_placeholder"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:layout_marginEnd="4dp"
                android:textSize="16sp"
                android:layout_margin="12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/jobTypePickerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endTimePickerCard">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/jobTypePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/dividerLine2"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTypePickerCard"/>

    <TextView
        android:id="@+id/groupTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:text="@string/add_activity_group_title_2"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerLine2" />

    <LinearLayout
        android:id="@+id/batchModeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupTitle2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/batchSwitch"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batch_mode_switch_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/batch_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/batch_mode_switch_summary" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>